# nir

./: .gitignore  CMakeLists.txt  TODO.md  run_cpu.sh  run_gpu.sh
benchmark/: plot_results.py  run_all.sh
include/: BCKernel.hpp  BoundaryCondition.hpp  Config.hpp  CpuSolver.hpp  CudaSolver.hpp  EulerUtils.hpp  FluxKernels.hpp  GpuMesh.hpp  HeatKernel.hpp  KernelCommon.hpp  Mesh.hpp  MpiDecomp.hpp  OpenCLSolver.hpp  PhysicsType.hpp  Solver.hpp  State.hpp  StateVector.hpp  Types.hpp  VTKWriter.hpp
problems/: CMakeLists.txt
problems/heat_gaussian/: CMakeLists.txt  Physics.hpp  Problem.hpp  inputs
problems/isentropic_vortex/: CMakeLists.txt  Exact.hpp  Physics.hpp  Problem.hpp  inputs  main.cu
problems/kelvin_helmholtz/: CMakeLists.txt  Physics.hpp  Problem.hpp  inputs
problems/rayleigh_taylor/: CMakeLists.txt  Physics.hpp  Problem.hpp  inputs  main.cu
problems/sod_shock/: CMakeLists.txt  Exact.hpp  Physics.hpp  Problem.hpp  inputs
scripts/: animate.py  animate_kh.py  diag_field.py  plot_convergence.py  plot_snapshot.py  plot_vortex_convergence.py  run_cpu.sh  run_demo.sh  run_kh.sh  run_kh_mcnally.sh  run_perf.sh  run_profile.sh  run_rt_liska.sh  run_scaling.sh  run_sod.sh  run_vortex_convergence.sh
src/: CMakeLists.txt  Config.cpp  CpuSolver.cpp  CudaSolver.cu  GpuMesh.cu  Mesh.cpp  MpiDecomp.cpp  Solver.cpp  main.cpp  solver.cpp  solver.cu
src/Advance/: Solver.hpp  solver.cu  solver_cpu_stub.cpp  solver_impl.inl
src/Base/: FieldView.hpp  FvmMacros.hpp  FvmTypes.hpp  ParallelFor.hpp  StateVector.hpp
src/IO/: InputParser.cpp  InputParser.hpp  VTKWriter.hpp
src/Mesh/: BC.hpp  GpuMesh.cu  GpuMesh.hpp  Mesh.cpp  Mesh.hpp  MpiDecomp.cpp  MpiDecomp.hpp
src/Riemann/: BCKernel.hpp  EulerUtils.hpp  FluxKernels.hpp
src/Timing/: Timer.cpp  Timer.hpp
